src/test/ui/fn/implied-bounds-unnorm-associated-type.stderr
error[E0623]: lifetime mismatch
  --> $DIR/implied-bounds-unnorm-associated-type.rs:14:5
   |
LL | fn f<'a, 'b>(s: &'b str, _: <&'a &'b () as Trait>::Type) -> &'a str {
   |                 -------      ----------
   |                 |
   |                 these two types are declared with different lifetimes...
LL |     s
   |     ^ ...but data from `s` flows here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0623`.
